# LanguageTrainerTGBot

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  LICENSE  QUIZ_POLL_REFERENCE.md  RAILWAY_SETUP.md  README.md  pyproject.toml  requirements.txt
api/: main.py  scheduler.py
config/: channels.py
conn_ai/: client.py  example.py  test.py
conn_tg/: check_env.py  client.py  example.py  quiz_poll_example.py  regenerate_session.py  session_to_string.py  simple_test.py  split_session.py  string_to_session.py  test.py  test_split.py  verify_split.py
services/: post_processor.py
