[project]
name = "language-trainer-tg-bot"
version = "0.1.0"
description = "Automated Telegram channel bot for learning Arabic through news translation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
    "telethon>=1.34.0",
    "google-generativeai>=0.3.0",
    "python-socks[asyncio]>=2.0.0",
]

[project.urls]
Repository = "https://github.com/Arseni1919/LanguageTrainerTGBot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conn_tg", "conn_ai", "api", "config"]
